testdata/baselines/reference/submodule/conformance/assignmentCompatWithGenericCallSignatures4.errors.txt
assignmentCompatWithGenericCallSignatures4.ts(12,1): error TS2719: Type '<T>(z: T) => void' is not assignable to type '<T>(z: T) => void'. Two different types with this name exist, but they are unrelated.
  Types of parameters 'z' and 'z' are incompatible.
    Type 'T' is not assignable to type 'I2<T>'.
      Type 'I2<I2<T>>' is not assignable to type 'I2<T>'.
        Type 'I2<T>' is not assignable to type 'T'.
          'T' could be instantiated with an arbitrary type which could be unrelated to 'I2<T>'.


==== assignmentCompatWithGenericCallSignatures4.ts (1 errors) ====
    // some complex cases of assignment compat of generic signatures.
    
    interface I2<T> {
        p: T
    }
    
    var x: <T extends I2<T>>(z: T) => void
    var y: <T extends I2<I2<T>>>(z: T) => void
    
    // These both do not make sense as we would eventually be comparing I2<T> to I2<I2<T>>, and they are self referencing anyway
    x = y 
    y = x 
    ~
!!! error TS2719: Type '<T>(z: T) => void' is not assignable to type '<T>(z: T) => void'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Types of parameters 'z' and 'z' are incompatible.
!!! error TS2719:     Type 'T' is not assignable to type 'I2<T>'.
!!! error TS2719:       Type 'I2<I2<T>>' is not assignable to type 'I2<T>'.
!!! error TS2719:         Type 'I2<T>' is not assignable to type 'T'.
!!! error TS2719:           'T' could be instantiated with an arbitrary type which could be unrelated to 'I2<T>'.
    